Fixed the double scroll on users screen and the social urls external link

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -253,11 +253,15 @@ tbody td.user-city i {
   font-size: 1.1em;
 }
 
+#users-table.table-wrapper-scroll-y,
 .table-wrapper-scroll-y {
   display: block;
   max-height: 88vh;
-  overflow-y: auto;
   -ms-overflow-style: -ms-autohiding-scrollbar;
+}
+
+#users-table.table-wrapper-scroll-y {
+  overflow-y: auto;
 }
 
 #userModal .modal-body {
